adding picture of my wife, son and I <3

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           <a href="#" alt=""><button class="button2" type="button">I'm Feeling Lucky</a></button>
         </form>
       </div>
+      <div align="center">
+        <image src="images/family.jpg" alt="The Bartlett Family">
+          </div>
     </div>
 
     <footer>
