update picture size

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </form>
       </div>
       <div align="center">
-        <image src="images/family.jpg" alt="The Bartlett Family">
+        <image src="images/family.jpg" height="200" width="100" alt="The Bartlett Family">
           </div>
     </div>
 
