more picture updates

--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
         </form>
       </div>
       <div align="center">
+         <image height="50" src="images/family.jpg" width="25" alt="The Bartlett Family">
+           </div>
+      <div align="center">
         <form>
           <a href="#" alt=""><button class="button2" type="button">Google Search</a></button>
           <a href="#" alt=""><button class="button2" type="button">I'm Feeling Lucky</a></button>
         </form>
       </div>
-      <div align="center">
-        <image src="images/family.jpg" height="200" width="100" alt="The Bartlett Family">
-          </div>
+
     </div>
 
     <footer>
