update title & picture

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <title>Mock Google HomePage</title>
+    <title>Christian Loves RollyLyn</title>
 
     <link rel="stylesheet" type="text/css" href="style/reset.css">
     <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -31,7 +31,7 @@
         </form>
       </div>
       <div align="center">
-         <image height="100" src="images/family.jpg" width="65" alt="The Bartlett Family">
+         <image height="200" src="images/family.jpg" width="135" alt="The Bartlett Family">
            </div>
       <div align="center">
         <form>
