return page to visually accurate google replica

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <title>Christian Loves RollyLyn</title>
+    <title>Mock Google Homepage</title>
 
     <link rel="stylesheet" type="text/css" href="style/reset.css">
     <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -30,9 +30,6 @@
           <input class="shadow" type="text" placeholder="Search Google or type URL">
         </form>
       </div>
-      <div align="center">
-         <image height="200" src="images/family.jpg" width="135" alt="The Bartlett Family">
-           </div>
       <div align="center">
         <form>
           <a href="#" alt=""><button class="button2" type="button">Google Search</a></button>
